# aws-tts-translator

./: Cargo.toml  README.md
.github/workflows/: lint.yml  test.yml
src/: error.rs  lib.rs
